# Keep metadata as minimal as possible in favor of pyproject.toml
[package]
name = "mzio-py"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
name = "mzio_py"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
fallible-iterator = "0.2.0"
pyo3 = { version = "0.20.0", features = ["extension-module", "anyhow"] }
mzio = { path = "../mzio-rs", features = ["fasta", "mgf", "msp"] }
