[package]
name = "mzio"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rusteomics"
repository = "https://github.com/rusteomics/mzio/"
license = "Apache-2.0"
license-file = "../LICENSE"
keywords = ["bioinformatics", "mass spectrometry", "proteomics", "eubic-ms"]
categories = ["science"]
publish = false

[lib]
name = "mzio"
# crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
fallible-iterator = "0.2.0"
fast-float = { version = "0.2.0" , optional = true }
serde = "*"
mzcore = { path = "../../mzcore/mzcore-rs" }

[features]
fasta = []
mgf = ["dep:fast-float"]
msp = ["dep:fast-float"]